# internal/dto/response/dto.go
@@ -1,0 +1,10 @@
+package response
+
+type ErrorResponse struct {
+	Error *string `json:"error"`
+}
+
+type TokensResponse struct {
+	AccessToken  *string `json:"access_token"`
+	RefreshToken *string `json:"refresh_token"`
+}
